tests/negative/gold/bad_literal4_test.gold
tests/negative/bad_literal4_test.toit:6:9: error: Invalid number literal
  print 123456_
        ^~~~~~~
tests/negative/bad_literal4_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
